# A4_Array_Bounds

./: CMakeLists.txt
include/: array_bounds.hpp
src/: array_bounds.cpp  main.cpp
tests/: test.cpp
tests/catch2/: tests.cpp
